# gclc

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  Makefile.web  Makefile.win  README.md  clang_format
.github/workflows/: build.yml  test.yml
LaTeX_packages/: breqn.sty  cmbase.sym  flexisym.sty  gclc_proof.sty  mathstyle.sty
XML_support/: GeoCons.dtd  GeoConsGCLC.xsl  GeoConsHTML.xsl  GeoConsNL.xsl  GeoCons_proof.dtd  GeoCons_proof.xsl
gclcWeb/: .gitignore  CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.json  tweak-js.sh
gclcWeb/public/: style.css
gclcWeb/public/examples/: 3d.gcl  cycloid.gcl  menelaus.gcl  parametric.gcl  tree.gcl
gclcWeb/src/: build.ts  compiler.ts  editor.ts  file.ts  gclc.js  info.ts  main.ts  outputView.ts  popup.ts  proof.ts  proof.xsl  share.ts  types.ts
gclcWeb/src/gclcLanguage/: gclc.grammar  gclcLang.ts  lang.js  lang.terms.js
gclcWeb/src/pane/: panes.ts  settings.ts  terminal.ts  time.ts
manual/: .gitignore  fancyheadings.sty  fullpage.sty  gclc_man.tex  gclcproof.sty
manual/figures/: midpoint.gcl  midpoint.tkz  quick.gcl  quick.tkz  sample-conics.gcl  sample-conics.tkz  sample-curves.tkz  sample-while.tkz  sample0-triangle.gcl  sample0-triangle.tkz  sample_ceva.gcl  sample_ceva.tkz
regression_testing/: compare_outputs.sh  compare_proofs.sh
samples/basic_samples/: sample01_triangle.gcl  sample02_triangle_Euler.gcl  sample03_polygons.gcl  sample04_triangle.gcl  sample05_inversion.gcl  sample06_hyp.gcl  sample07_hyp.gcl  sample08_conics.gcl  sample09_while.gcl  sample10_while_nested.gcl  sample11_function.gcl  sample12_scales.gcl  sample13_while.gcl  sample14_integral.gcl  sample15_colors.gcl  sample16_3d.gcl  sample17_ang3d.gcl  sample18_plot.gcl  sample19_procedure.gcl  sample20_print.gcl  sample21_hyp.gcl  sample22_tree.gcl  sample23_arrays_bubble-sort.gcl  sample24_fill.gcl  sample25_bezier.gcl  sample26_include_hyp.gcl  sample27_tree_nodes.gcl  sample28_Koch_AniaPiktas.gcl  (+8 more)
source/: CMakeLists.txt  cGCLC.pro  cGCLCmain.cpp  gGCLC.pro  gGCLCmain.cpp  resource.qrc  wGCLCmain.cpp
source/AlgebraicMethods/: Groebner.cpp  Groebner.h  ITimeOut.cpp  ITimeout.h  Log.cpp  Log.h  Object.cpp  Object.h  ObjectBank.cpp  ObjectBank.h  PolyReader.cpp  PolyReader.h  Polynomial.cpp  Polynomial.h  Power.cpp  Power.h  Prover.cpp  Prover.h  Reduce.cpp  Reduce.h  StringBuilder.cpp  StringBuilder.h  Term.cpp  Term.h  TermStorage.cpp  TermStorage.h  TermStorageAvl.cpp  TermStorageAvl.h  TermStorageVector.cpp  TermStorageVector.h  UPolynomial.cpp  UPolynomial.h  UPolynomialFraction.cpp  UPolynomialFraction.h  UTerm.cpp  UTerm.h  Wu.cpp  Wu.h  XPolynomial.h  XTerm.cpp  (+3 more)
source/Export/: EPSOutput.cpp  EPSOutput.h  GCLCOutput.cpp  GCLCOutput.h  LaTeXOutput.cpp  LaTeXOutput.h  PSTricksOutput.cpp  PSTricksOutput.h  QGraphicsViewOutput.cpp  QGraphicsViewOutput.h  SVGOutput.cpp  SVGOutput.h  TikZOutput.cpp  TikZOutput.h
source/ExpressionParser/: parser.cpp  parser.h
source/FormHeaders/: ui_ChildForm.h  ui_ExportToRasterFormat.h  ui_FindDialog.h  ui_MainWindow.h  ui_ReplaceDialog.h  ui_WatchWindow.h
source/GCLCEngine/: Animations.cpp  BasicConstructions.cpp  BasicDefinitions.cpp  Calculations.cpp  Cartesian2DCommands.cpp  Cartesian3DCommands.cpp  DrawingCommands.cpp  GCLC.cpp  GCLC.h  LabelingCommands.cpp  Layers.cpp  LowLevelCommands.cpp  TheoremProving.cpp  Transformations.cpp
source/GCLCprover/: GCLCprover.cpp  GCLCprover.dsp  GCLCprover.h  GCLCprover.plg
source/GUI/: ChildForm.cpp  ChildForm.h  ChildForm.ui  ChildWindow.cpp  ChildWindow.h  ExportToRasterFormat.cpp  ExportToRasterFormat.h  ExportToRasterFormat.ui  FindDialog.cpp  FindDialog.h  FindDialog.ui  FreePointItem.cpp  FreePointItem.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OutputHighlighter.cpp  OutputHighlighter.h  ReplaceDialog.cpp  ReplaceDialog.h  ReplaceDialog.ui  WatchWindow.cpp  WatchWindow.h  WatchWindow.ui
source/GenericEngine/: GCompiler.cpp  GCompiler.h  IntermediateRepresentation.cpp  IntermediateRepresentation.h
source/GraphDrawing/: arclayereddrawing.cpp  arclayereddrawing.h  barycenterdrawing.cpp  barycenterdrawing.h  drawing.cpp  drawing.h  graph.cpp  graph.h  graph_drawing.vcproj  graph_util.cpp  graph_util.h  graphnode.cpp  graphnode.h  settings.cpp  settings.h
source/Import/: JavaView.cpp  JavaView.h  ListOfFaces.cpp  ListOfFaces.h
source/Input/: EditorInput.cpp  EditorInput.h  FileInput.cpp  FileInput.h  GCLCInput.cpp  GCLCInput.h  StringInput.cpp  StringInput.h
source/Logging/: DummyLog.cpp  DummyLog.h  FileLog.cpp  FileLog.h  GCLCLog.cpp  GCLCLog.h  QOutputLog.cpp  QOutputLog.h
source/TheoremProver/: AlgMethod.cpp  AlgMethod.h  AlgMethodReducible.cpp  AreaMethod.cpp  AreaMethod.h  GroebnerMethod.cpp  GroebnerMethod.h  ProverExpression.cpp  ProverExpression.h  TheoremProver.cpp  TheoremProver.h  WuMethod.cpp  WuMethod.h
source/Tools/jv2gcl/: FileInput.cpp  FileInput.cpp~  FileInput.h  FileInput.h~  GCLCInput.cpp  GCLCInput.cpp~  GCLCInput.h  GCLCInput.h~  GCompiler.h  JavaView.cpp  JavaView.cpp~  JavaView.h  JavaView.h~  ListOfFaces.cpp  ListOfFaces.cpp~  ListOfFaces.h  ListOfFaces.h~  jv2gcl.cpp  jv2gcl.cpp~  jv2gcl.dsp  jv2gcl.dsw  jv2gcl.ncb  jv2gcl.opt  jv2gcl.plg
source/Tools/jv2gcl/Release/: jv2gcl.pch  vc60.idb
source/Tools/jv2gcl/primitive/: Cube.jvd  Cube.jvx  CubeColor.jvd  CubeColor.jvx  DodecahedronTransp.jvd  DodecahedronTransp.jvx  PointSet2D.jvd  PointSet2D.jvx  PointSetColor.jvd  PointSetColor.jvx  PolygonSet2D.jvd  PolygonSet2D.jvx  PolygonSet2DLabels.jvd  PolygonSet2DLabels.jvx  SquareUnit2D.jvd  SquareUnit2D.jvx  cube.pic  dod.pic  jvxSample.jvd  jvxSample.jvx
source/Tools/jv2gcl/samples/: JavaViewSample.gcl  jv1.gcl  jv2.gcl  jv2.jvx  jv3.gcl  jv3.jvx  sample.jvx  sampleTorus.gcl  sampleTorus.jvx  test.gcl  test.jvx
source/Tools/view/: view.c
source/Utils/: Common.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  Version.h
test/: compare_outputs.sh  compare_proofs.sh
working_example/: gclc.sty  sample.tex  sample0_triangle.gcl  sample0_triangle.tkz
(+130 files in other folders)
